still trying to fix totalCost and checkbox inputs.  Adds README.md

--- a/index.html
+++ b/index.html
@@ -29,8 +29,10 @@
               <div class="form-group">
                 <fieldset id="form-toppings">
                   <label for="toppings">Add toppings*:</label><br>
+                  <input type="checkbox" name="toppings" value="mushrooms"> Mushrooms<br>
                   <input type="checkbox" name="toppings" value="olives"> Olives<br>
                   <input type="checkbox" name="toppings" value="pepperoni"> Pepperoni<br>
+                  <input type="checkbox" name="toppings" value="pineapple"> Pineapple<br>
                   <input type="checkbox" name="toppings" value="sausage"> Sausage<br>
                 </fieldset>
                 <br><p>*The first topping is free! Additional toppings cost $1 each.</p>
