I DID IT!!!!! ADDS PIZZA TOPPINGS CORRECTLY!!!!!!!!!!!!!!!!!!!!

--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
   </head>
   <body>
     <div class="container">
-      <h2>Welcome to PizzaDX!</h2>
-      <h4>Delivery in 30 minutes or... You still have to pay</h4>
-
+      <div class="header">
+        <h2>Welcome to Pizza Delivery Express!</h2>
+        <br><h4>OR</h4>
+        <h2>PizzaDX</h2>
+        <p>--------------</p>
+        <h4>Delivery in 30 minutes or... you still have to pay..</h4>
+      </div>
       <div id="step-1">
         <h3>Place an order:</h3>
         <form id="pizza-form">
@@ -28,14 +32,14 @@
               </div>
               <div class="form-group">
                 <fieldset id="form-toppings">
-                  <label for="toppings">Add toppings*:</label><br>
+                  <label for="toppings">Add toppings:</label><br>
                   <input type="checkbox" name="toppings" value="mushrooms"> Mushrooms<br>
                   <input type="checkbox" name="toppings" value="olives"> Olives<br>
                   <input type="checkbox" name="toppings" value="pepperoni"> Pepperoni<br>
                   <input type="checkbox" name="toppings" value="pineapple"> Pineapple<br>
                   <input type="checkbox" name="toppings" value="sausage"> Sausage<br>
                 </fieldset>
-                <br><p>*The first topping is free! Additional toppings cost $1 each.</p>
+                <br>
               </div>
             </div>
           </div>
